020_retirement/grade.txt
Grading at 09/09/2022:18:35:31.357913
For commit ID c771c556ffd9b8581819e859c376c4ee5f8fa1a5
Grading at Fri Sep  9 02:35:31 PM EDT 2022
Attempting to compile retirement.c
retirement.c: In function ‘retirement’:
retirement.c:26:23: error: ‘retire’ undeclared (first use in this function); did you mean ‘retired’?
   26 |   int retire_months = retire.months;
      |                       ^~~~~~
      |                       retired
retirement.c:26:23: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
